--- a/ProcessingApp/appsettings.json
+++ b/ProcessingApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "TradesContext": "Server=DESKTOP-C29SMG8\\SQLEXPRESS01;Database=TradesDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TradesContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TradesDB;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
